--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,11 @@
                     These puzzles are addictingly fun, and I decided to implement my own version of KenKen®, both as an exercise in development
                     but also to add my own advanced features, such as more complex mathematical operations, the use of the numbers 0 to N-1 instead of 1 to N,
                     and even hidden clues. If you are interested in playing an interactive SuperCalc puzzle, <a href="/puzzler/index.html">click here.</a>
+                    <h3><a href="/puzzler/killer-sudoku/index.html">Killer Sudoku</a></h3>
+                    Killer Sudoku is a variant of Sudoku that is more mathematically challenging. The objective is to fill out a N by N Sudoku grid while still adhering to the clues
+                    provided. Here is an example puzzle: <br>
+                    <img src="images/killer-sudoku.png" title="killer-sudoku" id="killer-sudoku" width="250" height="250" class="center"/>
+                    A fun new variant is Sudoku X, which adds the constraint that the main diagonals must also contain unique numbers 1-N. If you are interested in playing an interactive Killer Sudoku puzzle, <a href="/puzzler/killer-sudoku/index.html">click here.</a>
                     <h3><a href="https://github.com/katsukixyz/hackgt-9">Weather or not!</a></h3>
                     Weather or not is a browser extension that three of my friends and I developed during the 2022 GT Hackathon. The idea is to integrate 
                     a weather service into Google Calendar, which can tell you the weather at a given events location. <br>
