Adding fun things

--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -43,6 +43,7 @@
                 <b>N</b>: Take notes <br>
                 <b>D</b>: Delete <br>
                 <b>U</b>: Undo <br>
+                <b>H</b>: Hover mode (highlight cage) <br>
                 <b>S</b>: Save current state <br>
                 <b>R</b>: Return to saved state <br>
                 <b>P</b>: Add all notes <br>
